--- a/TODO-List/TODO-List.csproj
+++ b/TODO-List/TODO-List.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Extensions" />
       <Folder Include="Model" />
       <Folder Include="View" />
     </ItemGroup>
