--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.13" />
+      <PackageReference Include="ReactiveUI" Version="18.3.1" />
     </ItemGroup>
 
     <ItemGroup>
